# tdt

./: .gitignore  .gitmodules  CMakeLists.txt
assets/: dragon_low2.b3dm  tileset.json  tileset2.json
convert_b3dm_gltf1_to_gltf2/: bootstrap.sh  convert.py  package.json
experimental/: test_compile_shader.py  view_laz.py
fit_rect/: first.py
pytdt/: gltf.py  tdt.py
pytdt/tools/: kml_to_gltf.py
shaders/: simple_textured.frag  simple_textured.vert  simplest.frag  simplest.vert
src/: camera.cc  camera.h  gltf_node.cc  gltf_node.h  main.cc  parse_khr_techniques_webgl.cc  parse_khr_techniques_webgl.h  program_cache.cc  program_cache.h  scene_graph.cc  scene_graph.h  tdt_node.cc  tdt_node.h  test_tiny_tdt.cc  tiny_tdt.h  twindow.cc  twindow.h  window.cc  window.h
train_building_segmentor/: dataset.py  edger.py  trainer.py
